[package]
name = "modern_antivirus"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ratatui = "0.26"
crossterm = "0.27"
aes-gcm = "0.10"
aead = "0.5"
rand = "0.8"
zip = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
